--- a/index.html
+++ b/index.html
@@ -65,20 +65,25 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active ">
                         <img src="./imgs/carousel-1.jpg" class="d-block w-100 img-fluid" alt="...">
-                        <div class="carousel-caption  d-md-block carousel-info " style="z-index: 1;">
-                            <h5 class="display-2 fw-bolder">WEDDING DAY! MAKE<br>
+                        <div class="carousel-caption d-md-block carousel-info " style="z-index: 1;">
+                            <h5 class=" display-2 fw-bolder ">WEDDING DAY! MAKE<br>
                                 IT SPECIAL</h5>
-                            <p class="py-3 fs-5">We are an all-inclusive venue that can handle your every need, from
+                            <p class="py-3 fs-5 d-sm-none d-none d-lg-block ">We are an all-inclusive venue that can
+                                handle your every
+                                need,
+                                from
                                 hotel accomodations, bar <br>and restaurant as well as our on-site wedding.
                             </p>
-                            <button class="btn btn-info text-white px-5 py-3 rounded-pill fs-5">Book Now</button>
+                            <button class="btn btn-info text-white px-5 py-3  rounded-pill fs-5 ">Book
+                                Now</button>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="./imgs/carousel-2.jpg" class="d-block w-100 img-fluid" alt="...">
-                        <div class="carousel-caption d-md-block carousel-info  " style="z-index: 1;">
+                        <div class="carousel-caption  d-md-block carousel-info  " style="z-index: 1;">
                             <h5 class="display-2 fw-bolder">Let's find your wedding team</h5>
-                            <p class="py-3 fs-5">Start your Wedding team, then get right back to celebrating your
+                            <p class="py-3 fs-5 d-sm-none d-none d-lg-block">Start your Wedding team, then get right
+                                back to celebrating your
                                 engagement! <br>Your registry and website, together. It's simple.</p>
                             <button class="btn btn-info text-white px-5 py-3 rounded-pill fs-5">Book Now</button>
                         </div>
@@ -87,7 +92,8 @@
                         <img src="./imgs/carousel-3.jpg" class="d-block w-100 img-fluid" alt="...">
                         <div class="carousel-caption d-md-block carousel-info " style="z-index: 1;">
                             <h5 class="display-2 fw-bolder">Instant Online Booking</h5>
-                            <p class="py-3 fs-5">Organizing a wedding always starts with a confirmed date! Some
+                            <p class="py-3 fs-5 d-sm-none d-none d-lg-block">Organizing a wedding always starts with a
+                                confirmed date! Some
                                 representative <br> placeholder content for the third slide.</p>
                             <button class="btn btn-info text-white px-5 py-3 rounded-pill fs-5">Book Now</button>
                         </div>
@@ -132,8 +138,8 @@
             <!-- toasts -->
             <h1 class="text-center py-5 display-3">Our Best Package</h1>
             <div class="container py-3">
-                <div class="row row-cols-1 row-cols-md-3 g-4">
-                    <div class="col-lg-3">
+                <div class="row row-cols-1 row-cols-md-4 g-4">
+                    <div class="col-lg-3 col-md-4 col-10 mx-auto">
                         <div class="card h-100 border-0 shadow p-2 ">
                             <div class="card-body">
                                 <small class="fs-3 fw-bold">$299</small>
@@ -143,9 +149,9 @@
                                 <ul class="list-unstyled">
                                     <li><i class="fas fa-check-circle"></i>limited space access</li>
                                     <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
-                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
-                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
-                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
+                                    <li><i class="fas fa-check-circle"></i>event support</li>
+                                    <li><i class="fas fa-check-circle"></i>Decoration design</li>
+                                    <li><i class="fas fa-check-circle"></i>Per day bill</li>
                                 </ul>
                             </div>
                             <div class="text-center">
@@ -154,20 +160,18 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 col-md-4 col-10 mx-auto">
                         <div class="card h-100 border-0 shadow p-2 ">
                             <div class="card-body">
-                                <small class="fs-3 fw-bold">$299</small>
-                                <h5 class="card-title fw-bold pt-3 pb-2">Business fair</h5>
-                                <p class="card-text">This card has supporting text below as a natural lead-in to
-                                    additional
-                                    content.</p>
+                                <small class="fs-3 fw-bold">$499</small>
+                                <h5 class="card-title fw-bold pt-3 pb-2">Wedding basic</h5>
+                                <p class="card-text">For weddings with basic plan and limited item</p>
                                 <ul class="list-unstyled">
-                                    <li><i class="fas fa-check-circle"></i>limited space access</li>
-                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
-                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
-                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
-                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
+                                    <li><i class="fas fa-check-circle"></i>Full space access</li>
+                                    <li><i class="fas fa-check-circle"></i>Food arrangement</li>
+                                    <li><i class="fas fa-check-circle"></i>mangement support</li>
+                                    <li><i class="fas fa-check-circle"></i>Decoration design </li>
+                                    <li><i class="fas fa-check-circle"></i>Billed as shift</li>
                                 </ul>
                             </div>
                             <div class="text-center">
@@ -175,7 +179,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 col-md-4 col-10 mx-auto">
                         <div class="card bg-primary h-100 border-0 shadow-lg p-3">
                             <div class="card-body">
                                 <!-- adding badge -->
@@ -185,21 +189,19 @@
                                     <span class="visually-hidden">unread messages</span>
                                 </span>
                                 <!-- adding badge end -->
-                                <small class="fs-3 fw-bold text-white">$299</small>
-                                <h5 class="card-title fw-bold pt-3 pb-2 text-white">Business fair</h5>
-                                <p class="card-texts ">For most businesses event
-                                    like book fair, craft fair.</p>
+                                <small class="fs-3 fw-bold text-white">$999</small>
+                                <h5 class="card-title fw-bold pt-3 pb-2 text-white">Wedding plus</h5>
+                                <p class="card-texts ">For most weddings with premium plans</p>
                                 <ul class="list-unstyled">
-                                    <li class="text-white"><i class="fas fa-check-circle text-white"></i>limited space
+                                    <li class="text-white"><i class="fas fa-check-circle text-white"></i>Full space
                                         access</li>
-                                    <li class="text-white"><i class="fas fa-check-circle text-white"></i>Secuirty
-                                        facility</li>
-                                    <li class="text-white"><i class="fas fa-check-circle text-white"></i>Secuirty
-                                        facility</li>
-                                    <li class="text-white"><i class="fas fa-check-circle text-white"></i>Secuirty
-                                        facility</li>
-                                    <li class="text-white"><i class="fas fa-check-circle text-white"></i>Secuirty
-                                        facility</li>
+                                    <li class="text-white"><i class="fas fa-check-circle text-white"></i>Dedicated team
+                                    </li>
+                                    <li class="text-white"><i class="fas fa-check-circle text-white"></i>Buffet food
+                                    </li>
+                                    <li class="text-white"><i class="fas fa-check-circle text-white"></i>Premium
+                                        Decoration</li>
+                                    <li class="text-white"><i class="fas fa-check-circle text-white"></i>pay as pan</li>
                                 </ul>
                             </div>
                             <div class="text-center">
@@ -208,19 +210,18 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 col-md-4 col-10 mx-auto">
                         <div class="card h-100 border-0 shadow p-2">
                             <div class="card-body">
-                                <small class="fs-3 fw-bold">$299</small>
-                                <h5 class="card-title fw-bold pt-3 pb-2">Business fair</h5>
-                                <p class="card-text">For most businesses event
-                                    like book fair, craft fair.</p>
+                                <small class="fs-3 fw-bold">$1449</small>
+                                <h5 class="card-title fw-bold pt-3 pb-2">Corporate event</h5>
+                                <p class="card-text">For most corporate business events</p>
                                 <ul class="list-unstyled">
-                                    <li><i class="fas fa-check-circle"></i>limited space access</li>
+                                    <li><i class="fas fa-check-circle"></i>Full space access</li>
+                                    <li><i class="fas fa-check-circle"></i>Dedicated team</li>
+                                    <li><i class="fas fa-check-circle"></i>premium Decoration</li>
                                     <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
-                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
-                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
-                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
+                                    <li><i class="fas fa-check-circle"></i>pay as plan</li>
                                 </ul>
                             </div>
                             <div class="text-center">
@@ -298,7 +299,7 @@
         <!--/////==== FAQ section area ====/////-->
 
         <section id="about" class="faq-section py-5">
-            <h1 class="text-center py-5">Frequently Asked Questions</h1>
+            <h1 class="text-center py-5">Learn About Us</h1>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
